gateway/app.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    app: gateway
    deploymentconfig: gateway
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    type: Rolling
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: gateway
        version: v1
        deploymentconfig: gateway
    spec:
      restartPolicy: Always
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/sample-tracing/gateway:latest
        imagePullPolicy: Always
        name: gateway
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gateway
    service: gateway
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: gateway
    deploymentconfig: gateway
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tracing-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing-app
spec:
  hosts:
  - "*"
  gateways:
  - tracing-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /trace1
    - uri:
        exact: /trace2
    - uri:
        exact: /trace3
    route:
    - destination:
        host: gateway
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: gateway
spec:
  host: gateway
  subsets:
  - name: v1
    labels:
      version: v1
    route:
    - destination:
        host: gateway
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: gateway
spec:
  host: gateway
  subsets:
  - name: v1
    labels:
      version: v1
