gateway/gateway.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: gateway
  name: gateway
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    app: gateway
    deploymentconfig: gateway
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: gateway
        version: v1
        deploymentconfig: gateway
    spec:
      restartPolicy: Always
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/sample-tracing/gateway:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: gateway
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /readiness
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gateway
    service: gateway
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: gateway
    deploymentconfig: gateway
#---
#apiVersion: route.openshift.io/v1
#kind: Route
#metadata:
#  labels:
#    app: gateway
#  name: gateway
#spec:
#  port:
#    targetPort: 8080-tcp
#  to:
#    kind: Service
#    name: gateway
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tracing-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing-app
spec:
  hosts:
  - "*"
  gateways:
  - tracing-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: gateway
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: gateway
spec:
  host: gateway
  subsets:
  - name: v1
    labels:
      version: v1
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: DestinationRule
#metadata:
#  name: gateway
#spec:
#  host: gateway
#  trafficPolicy:
#    tls:
#      mode: ISTIO_MUTUAL
#  subsets:
#  - name: v1
#    labels:
#      version: v1
